--- a/public/about/index.html
+++ b/public/about/index.html
@@ -124,6 +124,9 @@ Southerner meets San Francisco. I began my career in a newsroom, made a home in 
                     </li>
                 </ul>
             </div>
+            <div class="col-md-4">
+                <span class="copyright">Built with love and <a href="http://www.gohugo.io" target="_blank">Hugo</a> &hearts;</span>
+            </div>
         </div>
     </div>
 </footer>
