--- a/public/projects/spotonpart2/index.html
+++ b/public/projects/spotonpart2/index.html
@@ -172,6 +172,9 @@ In <a href="/projects/SpotOn" target=_blank">Part 1</a>, I shared how we helped 
                     </li>
                 </ul>
             </div>
+            <div class="col-md-4">
+                <span class="copyright">Built with love and <a href="http://www.gohugo.io" target="_blank">Hugo</a> &hearts;</span>
+            </div>
         </div>
     </div>
 </footer>
