--- a/public/portfolio/dell-s-solar-powered-classroom-ethnography-in-kenya/index.html
+++ b/public/portfolio/dell-s-solar-powered-classroom-ethnography-in-kenya/index.html
@@ -113,6 +113,9 @@
                     </li>
                 </ul>
             </div>
+            <div class="col-md-4">
+                <span class="copyright">Built with love and <a href="http://www.gohugo.io" target="_blank">Hugo</a> &hearts;</span>
+            </div>
         </div>
     </div>
 </footer>
