--- a/public/projects/2015-14-pinterest/index.html
+++ b/public/projects/2015-14-pinterest/index.html
@@ -213,6 +213,9 @@ I had used the filter icon that&rsquo;s part of Andriod design convention. Howev
                     </li>
                 </ul>
             </div>
+            <div class="col-md-4">
+                <span class="copyright">Built with love and <a href="http://www.gohugo.io" target="_blank">Hugo</a> &hearts;</span>
+            </div>
         </div>
     </div>
 </footer>
