--- a/public/projects/SpotOn/index.html
+++ b/public/projects/SpotOn/index.html
@@ -189,6 +189,9 @@ recommendations, quick wins and recommended next steps for SpotOn Parking.</p>
                     </li>
                 </ul>
             </div>
+            <div class="col-md-4">
+                <span class="copyright">Built with love and <a href="http://www.gohugo.io" target="_blank">Hugo</a> &hearts;</span>
+            </div>
         </div>
     </div>
 </footer>
