--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Drop me a line. I'd love to connect!</h3>
+                    <h3 class="section-subheading text-muted">My story in three parts!</h3>
                 </div>
             </div>
             <div class="row text-center">
