edited style lend and together 10

--- a/public/projects/2015-05-10-StyleLend-App/index.html
+++ b/public/projects/2015-05-10-StyleLend-App/index.html
@@ -111,25 +111,23 @@
 
 <p>She can favorite dresses to view later or continue shopping.</p>
 
-<p><img class="img-responsive img-centered" src="/images/Screen4.png" alt=""></p>
+<p><img class="img-responsive img-centered" src="/images/Screen4Edit.png" alt=""></p>
 
 <p>It was important to me to add multiple dress views and the ability to view dress details on one screen.</p>
 
 <p>Next, Julie can customize her rental, a feature that I wanted to make was available at any point during the process.</p>
 
-<p><img class="img-responsive img-centered" src="/images/Screen4 with calendars.png" alt=""></p>
+<p><img class="img-responsive img-centered" src="/images/Screen6Edit.png" alt=""></p>
 
 <p>When it came to designing the checkout process, I kept things very simple.</p>
 
-<p><img class="img-responsive img-centered" src="/images/Screen5.png" alt=""></p>
+<p><img class="img-responsive img-centered" src="/images/Screen5Edit.png" alt=""></p>
 
 <p>Unnecessary information (email, phone number) is not needed during this process- those are pieces of information that can be garnered from account settings. Instead, I focused on including only the necessary pieces of information to create a checkout process that is no more than two screens.</p>
 
 <p>Once Julie has rented her dress, she can immediately track the order or edit it once again (perhaps she changes her mind).</p>
 
-<p><img class="img-responsive img-centered" src="/images/Last Screen.png" alt=""></p>
-
-<p><img class="img-responsive img-centered" src="/images/Last Screen.png" alt=""></p>
+<p><img class="img-responsive img-centered" src="/images/LastScreenEdit.png" alt=""></p>
 
 <p>When Julie opens the app back up, a status message tells her where her dress is. If she clicks on the chevron on the top righthand corner, it will take her to a deep link that tracks her dress delivery.</p>
 
@@ -137,8 +135,7 @@
 
 <p>My goal for this app was to create a simple, clean, fashion-forward experience that enables users to browse and rent dresses on their phone. By focusing on only the necessary bits of information, I aimed to create an experience that users could follow through quickly and joyfully. After all, Style Lend is all about providing the perfect outfit. That certainly calls for a joyful app.</p>
 
-<p>Here&rsquo;s a video showing the interaction.
-<iframe width="560" height="420" src="https://www.dropbox.com/s/wcdwwky6gbqecju/Paige%20%231.mov?dl=0" frameborder="0" allowfullscreen></iframe></p>
+<p><a href="http://youtu.be/dxrrTtvDSHQ" target=_blank">Here&rsquo;s</a> a video showing the interaction.</p>
 
 <p>*Style Lend is launching their iOS app on May 11th, 2015. I created this app prior to Style Lend&rsquo;s launch.</p>
 
@@ -198,6 +195,9 @@
     
     <script src="/js/agency.js"></script>
 
-</body>
+<script>document.write('<script src="http://'
+        + (location.host || 'localhost').split(':')[0]
+		+ ':1313/livereload.js?mindelay=10"></'
+        + 'script>')</script></body>
 
 </html>
