--- a/public/projects/together10/index.html
+++ b/public/projects/together10/index.html
@@ -99,7 +99,7 @@
 
 <p><strong>Feedback &amp; Pain Points</strong></p>
 
-<p>Here are some of the insides we received from the usability tests.</p>
+<p>Here are some of the insights we received from the usability tests.</p>
 
 <p><img class="img-responsive img-centered" src="/images/Feedback1.png" alt="">
 <div class="image-caption">Some users were confused by the phone and thought Together10 was an app (it&rsquo;s not- yet)</div></p>
@@ -111,11 +111,11 @@
 
 <p><em>Longterm Change</em></p>
 
-<p>Our longterm option is an overall restructuring of the homepage.</p>
-
 <p><img class="img-responsive img-centered" src="/images/Together10Wireframe.png" alt=""></p>
 
-<p>This redesign addresses user feedback and is aimed at clarifying how Together10 works.</p>
+<p>Our longterm option is an overall restructuring of the homepage. We create a wireframe that highlights this change.</p>
+
+<p>The redesign addresses user feedback and is aimed at clarifying how Together10 works.</p>
 
 <ul>
 <li><p>Highlights a clear value statement below the call to action [“Sign Up”].</p></li>
@@ -131,19 +131,17 @@
 
 <p><em>Quick Wins</em></p>
 
-<p>Of course, most startups don&rsquo;t have the time or resources to do a complete redesign. As a second option (one that could be shipped quickly), we recommended the following small changes.</p>
+<p>Of course, most startups don&rsquo;t have the time or resources to do a complete redesign. As a second option (one that could be shipped quickly), we recommended several small, quick changes.</p>
+
+<p>Here&rsquo;s an example of one suggested quick win.</p>
 
 <p><img class="img-responsive img-centered" src="/images/QuickWin1.png" alt=""></p>
-
-<p><img class="img-responsive img-centered" src="/images/QuickWin2.png" alt=""></p>
-
-<p><img class="img-responsive img-centered" src="/images/QuickWin3.png" alt=""></p>
 
 <p><strong>Conculusions &amp; Next Steps</strong></p>
 
 <p>We recommended that Together10 implement our designs and run an A/B test via Optimizely. After analyzing results from an A/B test, we also recommended that they establish a brand identity and language that carries throughout the Together10 page.</p>
 
-<p>Together10 will be implementing these changes in the coming weeks and we will be designing an onboarding experience based on feedback.</p>
+<p>Together10 will be implementing these changes in the coming weeks and my next step is to design an onboarding flow.</p>
 
         </section>
 
@@ -199,6 +197,9 @@
     
     <script src="/js/agency.js"></script>
 
-</body>
+<script>document.write('<script src="http://'
+        + (location.host || 'localhost').split(':')[0]
+		+ ':1313/livereload.js?mindelay=10"></'
+        + 'script>')</script></body>
 
 </html>
