--- a/public/about/index.html
+++ b/public/about/index.html
@@ -153,9 +153,6 @@ Southerner meets San Francisco. I began my career in a newsroom, made a home in 
     
     <script src="/js/agency.js"></script>
 
-<script>document.write('<script src="http://'
-        + (location.host || 'localhost').split(':')[0]
-		+ ':1313/livereload.js?mindelay=10"></'
-        + 'script>')</script></body>
+</body>
 
 </html>
