Fixed Pinterest images

--- a/public/projects/2015-14-pinterest/index.html
+++ b/public/projects/2015-14-pinterest/index.html
@@ -109,8 +109,8 @@
 
 <p>Alee wants to be able to see specific categories of pins that pinners she follows have shared. With this function, Alee can take her curated content and curate it further, creating a main feed that features only those categories she&rsquo;s interested in.</p>
 
-<p><a href="/images/AleePersona.jpg" data-lightbox="image-1" data-title="My caption"><img class="img-responsive img-centered img-responsive-small" src="/images/AleePersona.jpg" alt=""></a>
-<div class="image-caption">Alee Persona</div></p>
+<p><a href="/images/projects/pinterest/pinterest-alee-persona.jpg" data-lightbox="images-pinterest" data-title="Alee's Persona"><img class="img-responsive img-centered img-responsive-small" src="/images/projects/pinterest/pinterest-alee-persona.jpg" alt=""></a>
+<div class="image-caption-center">Alee&rsquo;s Persona</div></p>
 
 <p><strong>Process</strong></p>
 
@@ -134,11 +134,11 @@
 
 <p>Alee&rsquo;s motive for using Pinterest is to reference pins she likes. I decided that she would most likely either &ldquo;heart&rdquo; a pin or &ldquo;pin&rdquo; a pin to one of her DIY boards. Thus, my task flow shows her journey with Pinterest ending in either of these two actions.</p>
 
-<p><img class="img-responsive img-centered" src="/images/Pinterest Task Flow.jpg" alt=""></p>
+<p><a href="/images/projects/pinterest/pinterest-task-flow.jpg" data-lightbox="images-pinterest" data-title="Task Flow"><img class="img-responsive img-centered img-responsive-small" src="/images/projects/pinterest/pinterest-task-flow.jpg" alt=""></a></p>
 
 <p><strong>UI Sketches</strong></p>
 
-<p><img class="img-responsive img-centered" src="/images/WireFrames.jpg" alt=""></p>
+<p><a href="/images/projects/pinterest/pinterest-wireframe-sticky-notes.jpg" data-lightbox="images-pinterest" data-title="Wireframes"><img class="img-responsive img-centered img-responsive-small" src="/images/projects/pinterest/pinterest-wireframe-sticky-notes.jpg" alt=""></a></p>
 
 <p>One thing I learned during this part of the process was that the categories needed to be a pop up box, as opposed to a separate window. Sketching out 6 different ways to display categories helped clarify that this was the more effective route.</p>
 
@@ -147,22 +147,22 @@
 <p>After creating my wireframes, I did a short usability study with a few people and noticed something immediately: the filter button was confusing.
 I had used the filter icon that&rsquo;s part of Andriod design convention. However, the feedback I received was that users thought the button was meant to sort content&hellip;.not choose a category. Uh oh!</p>
 
-<p><img class="img-responsive img-centered" src="/images/filter.jpg" alt="">
-<div class="image-caption">Does this filter or sort?</div></p>
+<p><img class="img-responsive img-centered" src="/images/projects/pinterest/pinterest-filter.jpg" alt="">
+<div class="image-caption-center" style="width: 200px">Does this filter or sort?</div></p>
 
 <p>At first, I thought to use the same categories icon that Pinterest has on its site. However, this icon on mobile can be confusing. After looking at how other Android apps displayed their filter button, I used Fitmob as inspiration.</p>
 
-<p><img class="img-responsive img-centered" src="/images/fitmob.jpg" alt=""></p>
+<p><a href="/images/projects/pinterest/pinterest-fitmob-example.png" data-lightbox="images-pinterest" data-title="Fitmob Example"><img class="img-responsive img-centered img-responsive-small" src="/images/projects/pinterest/pinterest-fitmob-example-small.png" alt=""></a></p>
 
 <p>It&rsquo;s simple and direct. There&rsquo;s no doubting what this button does.</p>
 
 <p>My wireframes will help explain:</p>
 
-<p><img class="img-responsive img-centered" src="/images/Wireframes 1.jpg" alt=""></p>
+<p><a href="/images/projects/pinterest/pinterest-wireframe-final-1.jpg" data-lightbox="images-pinterest" data-title="Wireframes Final"><img class="img-responsive img-centered img-responsive-small" src="/images/projects/pinterest/pinterest-wireframe-final-1.jpg" alt=""></a></p>
 
-<p><img class="img-responsive img-centered" src="/images/Updatedwireframe.jpg" alt=""></p>
+<p><a href="/images/projects/pinterest/pinterest-wireframe-final-2.jpg" data-lightbox="images-pinterest" data-title="Wireframes Final"><img class="img-responsive img-centered img-responsive-small" src="/images/projects/pinterest/pinterest-wireframe-final-2.jpg" alt=""></a></p>
 
-<p><img class="img-responsive img-centered" src="/images/Wireframes 4.jpg" alt=""></p>
+<p><a href="/images/projects/pinterest/pinterest-wireframe-final-3.jpg" data-lightbox="images-pinterest" data-title="Wireframes Final"><img class="img-responsive img-centered img-responsive-small" src="/images/projects/pinterest/pinterest-wireframe-final-3.jpg" alt=""></a></p>
 
 <p><strong>Prototype</strong></p>
 
@@ -242,6 +242,9 @@ I had used the filter icon that&rsquo;s part of Andriod design convention. Howev
     
     <script src="/js/agency.js"></script>
 
-</body>
+<script>document.write('<script src="http://'
+        + (location.host || 'localhost').split(':')[0]
+		+ ':1313/livereload.js?mindelay=10"></'
+        + 'script>')</script></body>
 
 </html>
