edited pinterest project pics

--- a/public/index.html
+++ b/public/index.html
@@ -1061,10 +1061,7 @@ I had used the filter icon that&rsquo;s part of Andriod design convention. Howev
     <script src="/js/cbpAnimatedHeader.js"></script>
 
 
-<script>document.write('<script src="http://'
-        + (location.host || 'localhost').split(':')[0]
-		+ ':1313/livereload.js?mindelay=10"></'
-        + 'script>')</script></body>
+</body>
 
 </html>
 
