Updated portolio to be sectioned

--- a/public/projects/spotonpart2/index.html
+++ b/public/projects/spotonpart2/index.html
@@ -201,9 +201,6 @@ In <a href="/projects/SpotOn" target=_blank">Part 1</a>, I shared how we helped 
     
     <script src="/js/agency.js"></script>
 
-<script>document.write('<script src="http://'
-        + (location.host || 'localhost').split(':')[0]
-		+ ':1313/livereload.js?mindelay=10"></'
-        + 'script>')</script></body>
+</body>
 
 </html>
