--- a/public/projects/vint/index.html
+++ b/public/projects/vint/index.html
@@ -99,7 +99,7 @@
 
 <p><strong>Users</strong>: I targeted my local Laundromat (captive audience), my Lyft driver Paul and the nice people at Workshop Café. In total, I interviewed 6 people and recorded my time with them. You can view the videos <a href="https://www.dropbox.com/sh/qxuw8nq9v6cabq9/AACWB_ikpNnqZ83eI9rFUn3Wa?dl=0" target="_blank">here</a>.</p>
 
-<p><img class="img-responsive img-centered" src="/images/Cafe.jpg" alt=""></p>
+<p><a href="/images/projects/pinterest/pinterest-Cafe.jpg" data-lightbox="images-pinterest" data-title="Usability Testing (in the wild)"><img class="img-responsive img-centered" src="/images/projects/vint/Cafe.jpg" alt=""></a></p>
 
 <p>I began by asking them the following filter questions:</p>
 
@@ -137,11 +137,9 @@
 
 <p><strong>My Recommendation</strong>: One of my users referenced what she called her favorite app- Urban Sitter. She said she would have liked to see Vint display recent bookings (with a cancel option) on the main page.</p>
 
-<p>I used Urban Sitter as my inspiration:</p>
+<p>I used the <a href="https://www.urbansitter.com/mobile" target="_blank">app</a> Urban Sitter as my inspiration.</p>
 
-<p><img class="img-responsive img-centered" src="/images/baby.jpg" alt=""></p>
-
-<p><img class="img-responsive img-centered" src="/images/Cancel2.jpg" alt=""></p>
+<p><img class="img-responsive img-centered" src="/images/projects/vint/Cancel2new.png" alt=""></p>
 
 <p>(One fun bug we found was with the booking procces itself. After booking, error message would pop up saying that the booking was not successful. This caused users to try a second time, which produced no error message. Even though they received an error message, the first booking had gone through, which means users were stuck with two bookings. I&rsquo;ve contacted Vint and they&rsquo;ve since fixed the bug.)</p>
 
@@ -151,7 +149,7 @@
 
 <p>None of the users I spoke with noticed the exercise categories, dates and times at the bottom of each instructors picture on the main page. Three users remarked how they wished there were categories but none noticed the categorization that was present.</p>
 
-<p><img class="img-responsive img-centered" src="/images/Category2.jpg" alt=""></p>
+<p><img class="img-responsive img-centered" src="/images/projects/vint/Category2.png" alt=""></p>
 
 <p><strong>Pain Point #3: Confusing Function of the Vint Logo</strong></p>
 
@@ -161,15 +159,15 @@
 
 <p>If you compare the Vint logo to another app&rsquo;s logo (in this case, Gmail), you can see that the Vint logo is larger. This might have added to the difficulty users had in noticing the back arrow:</p>
 
-<p><img class="img-responsive img-centered" src="/images/gmail.jpg" alt=""></p>
+<p><img class="img-responsive img-centered" src="/images/projects/vint/gmail.png" alt=""></p>
 
 <p>I realize that Vint&rsquo;s design is in keeping with Andriod&rsquo;s design principles but the logo isn&rsquo;t needed- users know what app they&rsquo;re in. Instead, I am leaning on material design and recommending that they remove the logo and increase the size of the back arrow.</p>
 
-<p><img class="img-responsive img-centered" src="/images/Backbutton.jpg" alt=""></p>
+<p><img class="img-responsive img-centered" src="/images/projects/vint/Backbutton.png" alt=""></p>
 
 <p>This is similar to Airbnb&rsquo;s app:</p>
 
-<p><img class="img-responsive img-centered" src="/images/Airbnb.jpg" alt=""></p>
+<p><img class="img-responsive img-centered" src="/images/projects/vint/Airbnb.png" alt=""></p>
 
 <p>(It&rsquo;s worth noting that when you click on the Vint logo while on the main page, it will exit you out of the app. This happened to every user I interviewed and their reaction was a mixture of surprise, confusion and dismay.)</p>
 
@@ -179,11 +177,9 @@
 
 <p>I really like how Pinterest does onboarding and recommend that Vint create a similar experience.</p>
 
-<p><img class="img-responsive img-centered" src="/images/Pinterest 1.jpg" alt=""></p>
+<p><img class="img-responsive img-centered" src="/images/projects/vint/Onboarding1.png" alt=""></p>
 
-<p><img class="img-responsive img-centered" src="/images/Pinterest 4.jpg" alt=""></p>
-
-<p>This design is also a little less intensive to create.</p>
+<p><img class="img-responsive img-centered" src="/images/projects/vint/Onboarding2.png" alt=""></p>
 
 <p>So stay tuned for Vint: Part deux (and updates on how that wedding dress fits).</p>
 
@@ -243,6 +239,9 @@
     
     <script src="/js/agency.js"></script>
 
-</body>
+<script>document.write('<script src="http://'
+        + (location.host || 'localhost').split(':')[0]
+		+ ':1313/livereload.js?mindelay=10"></'
+        + 'script>')</script></body>
 
 </html>
